force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/echosign_dev1__SIGN_Agreement__c.object-meta.xml
<CustomObject>
    <customHelpPage>echosign_dev1__EchosignHelp</customHelpPage>
    <label>Agreement</label>
    <nameField>
        <label>Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreements</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>