force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/Created_by_iContract__c.field-meta.xml
<CustomField>
    <fullName>Created_by_iContract__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will set as TRUE when the agreement is created through the iContract system</description>
    <label>Created by iContract</label>
    <type>Checkbox</type>
</CustomField>