force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__Document__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Document__c</fullName>
    <formula>IF( LEN(echosign_dev1__SignedPDF__c) &gt; 0, HYPERLINK( echosign_dev1__SignedPDF__c, IMAGE(&#39;https://secure.echosignforsalesforce.com/images/salesforce-pdf-icon.gif&#39;, &#39;PDF&#39;) &amp; &#39; &#39; &amp; Name  &amp; &#39;.pdf&#39;), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document</label>
    <type>Text</type>
</CustomField>