force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__Result__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Result__c</fullName>
    <formula>IF( AND(LEN(echosign_dev1__ErrorMessage__c) &gt; 0, ISPICKVAL( echosign_dev1__Status__c , &#39;Draft&#39;)), 
      IMAGE(&#39;https://secure.echosignforsalesforce.com/images/salesforce-error.gif&#39;, &#39;Error&#39;) &amp; &#39; &#39; &amp; echosign_dev1__ErrorMessage__c, 
      IF( AND(LEN(echosign_dev1__SignedPDF__c) &gt; 0, ISPICKVAL( echosign_dev1__Status__c , &#39;Signed&#39;)), 
           HYPERLINK( echosign_dev1__SignedPDF__c , IMAGE(&#39;https://secure.echosignforsalesforce.com/images/salesforce-pdf-icon.gif&#39;, &#39;PDF&#39;) &amp; &#39; &#39; &amp; Name &amp; &#39; - signed.pdf&#39;), 
           &#39;&#39;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Result</label>
    <type>Text</type>
</CustomField>