force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__StatusVisible__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__StatusVisible__c</fullName>
    <formula>CASE(
TEXT(echosign_dev1__Status__c), 
&#39;Waiting for Counter-Signature&#39;, &#39;Out for Signature&#39;, 
&#39;Waiting for Counter-Approval&#39;, &#39;Out for Approval&#39;, 
&#39;Waiting for Counter-Acceptance&#39;, &#39;Out for Acceptance&#39;, 
&#39;Waiting for Counter-Form-Filling&#39;, &#39;Out for Form-Filling&#39;, 
&#39;Waiting for Counter-Delivery&#39;, &#39;Out for Delivery&#39;, 
&#39;Pre-Send&#39;, &#39;Not Yet Sent for Signature&#39;,
TEXT(echosign_dev1__Status__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>