force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/validationRules/echosign_dev1__WrittenWithoutPosition.validationRule-meta.xml
<ValidationRule>
    <fullName>echosign_dev1__WrittenWithoutPosition</fullName>
    <active>true</active>
    <description>Fail validation if we want a written signature, and have position form fields selected.</description>
    <errorConditionFormula>TEXT(echosign_dev1__SignatureType__c)  = &#39;Written Signature&#39; &amp;&amp; echosign_dev1__Authoring__c</errorConditionFormula>
    <errorMessage>Positioning fields and signatures is not possible with a written signature.</errorMessage>
</ValidationRule>