force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>echosign_dev1__StatusVisible__c</columns>
    <columns>echosign_dev1__SignedPDF__c</columns>
    <columns>Template_Type_Used__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Agreements</label>
    <language>en_US</language>
</ListView>