force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/listViews/echosign_dev1__All.listView-meta.xml
<ListView>
    <fullName>echosign_dev1__All</fullName>
    <columns>NAME</columns>
    <columns>echosign_dev1__StatusVisible__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>echosign_dev1__SignedPDF__c</columns>
    <columns>Template_Type_Used__c</columns>
    <columns>echosign_dev1__Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:4</value>
    </filters>
    <label>Recent Agreements</label>
    <language>en_US</language>
    <sharedTo>
        <group>System_Admins</group>
    </sharedTo>
</ListView>